# cookiecutter-hatch-uv

./: .coverage  Makefile  README.md  pyproject.toml
tests/: test_bake_project.py
{{cookiecutter.package_name}}/: Makefile  pyproject.toml
